# app/response/res_order.go
@@ -12,3 +12,16 @@ type OrderPagination struct {
 	PaginationResponse
 	Data []Order `json:"data"`
 }
+
+type OrderDetail struct {
+	ProductName string
+	ProductID   uint
+	Price       float64
+	Amount      int
+	OrderID     int
+}
+
+type OrderDetailReponse struct {
+	BaseResponse
+	Data []OrderDetail `json:"data"`
+}
